<resources>
    <string name="app_name">MiProyecto</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">Navigation</string>
    <string name="ItemTest">This is an item test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ItemTest2">This is an item test 2</string>
    <string name="ItemTest3">This is an item test 3</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="etPasswordHint">Password</string>
    <string name="etEmail">E-mail</string>
    <string name="bLogin">Login</string>
    <string name="tvOr">OR</string>
    <string name="tvOr2">use Google Sign-in:</string>
    <string name="bSignUp">Sign Up</string>
    <string name="etRepeatPass">Repeat Password</string>
    <string name="etUsername">Username</string>
    <string name="bGoBack">Go Back</string>
    <string name="ToastRePassFail">Password doesn\'t match!</string>
    <string name="ToastVoidFields">Please, fill all the fields!</string>
    <string name="ToastUserShort">Username too short! (4 or more chars)</string>
    <string name="action_logout">Log Out</string>
    <string name="notVerified">Your email is not verified. Please check your inbox or contact us!</string>
    <string name="library">My Library</string>
    <string name="toast_empty_fields">Fields can\'t be empty!</string>
</resources>
